<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/lblCelsius"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="26dp"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:text="@string/digite_a_temperatura_em_celsius"
        android:textColor="@color/preto"
        />

    <EditText
        android:id="@+id/edtCelsius"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:inputType="numberDecimal|numberSigned"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:textSize="22sp"
        android:layout_marginTop="14dp"
        />

    <TextView
        android:id="@+id/lblEscolha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="20dp"
        android:text="@string/escolha_a_unidade"
        android:textSize="16sp"
        android:textColor="@color/preto"/>

    <RadioGroup
        android:id="@+id/rg1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="50dp"
        android:paddingRight="40dp"
        android:paddingTop="18dp">


        <RadioButton
            android:id="@+id/rbKelvin"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/kelvin"
            android:onClick="checarGrupo2"/>

        <RadioButton
            android:id="@+id/rbFahrenheit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fahrenheit"
            android:onClick="checarGrupo2"/>

    </RadioGroup>


    <RadioGroup
        android:id="@+id/rg2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="50dp"
        android:paddingRight="40dp"
        android:paddingTop="4dp">

        <RadioButton
            android:id="@+id/rbRankine"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/rankine"
            android:onClick="checarGrupo1"/>

    <RadioButton
        android:id="@+id/rbReaumur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/reaumur"
        android:onClick="checarGrupo1"/>

</RadioGroup>

<Button
        android:id="@+id/btnCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="24dp"
        android:onClick="converter"
        android:text="@string/converter"
        android:background="@color/cinza"/>

    <TextView
        android:id="@+id/lblResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultado"
        android:padding="10dp"
        android:layout_gravity="center"
        android:textSize="18sp"
        />


</LinearLayout>